--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "firebase": "^11.4.0",
     "next": "15.2.3",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
