--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "firebase": "^11.4.0",
     "next": "15.2.3",
